[package]
name = "mysql_crypt"
version = "0.1.0"
authors = ["fujita.y <fujita.y@edocode.co.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.22"
base64 = "0.11.0"
rust-crypto = "0.2.36"
