[package]
name = "mysql_crypt"
version = "0.1.0"
authors = ["Yuichi Fujita <fujita.y@edocode.co.jp>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/fujitayy/mysql_crypt-rs"
keywords = ["mysql", "crypto", "aes"]
description = "MySQL AES_ENCRYPT/DECRYPT functions for Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.11.0"
rust-crypto = "0.2.36"
thiserror = "1.0.9"
